# ChangeLog for media-sound/omptagger
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/omptagger/ChangeLog,v 1.6 2008/04/22 18:40:29 armin76 Exp $

  22 Apr 2008; Raúl Porcel <armin76@gentoo.org> omptagger-1.0.1.ebuild:
  Add ~sparc

*omptagger-1.0.1 (21 Apr 2008)

  21 Apr 2008; David Shakaryan <omp@gentoo.org> +omptagger-1.0.1.ebuild:
  Version bump.

  25 Nov 2007; Markus Rothe <corsair@gentoo.org> omptagger-1.0.ebuild:
  Added ~ppc64

  23 Nov 2007; David Shakaryan <omp@gentoo.org> omptagger-1.0.ebuild:
  Die on sed or dobin failure.

  23 Nov 2007; David Shakaryan <omp@gentoo.org> +metadata.xml:
  Add metadata.

*omptagger-1.0 (22 Nov 2007)

  22 Nov 2007; David Shakaryan <omp@gentoo.org> +omptagger-1.0.ebuild:
  New ebuild.
