@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/omptagger/Attic/omptagger-1.0.1.ebuild,v 1.2 2008/04/22 18:40:29 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/omptagger/omptagger-1.0.2.ebuild,v 1.1 2008/09/25 09:25:14 omp Exp $
 
 DESCRIPTION="CLI utility for tagging FLAC, Ogg Vorbis and MP3 files"
 HOMEPAGE="http://dev.gentoo.org/~omp/omptagger/"
