@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/omptagger
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/omptagger/ChangeLog,v 1.6 2008/04/22 18:40:29 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/omptagger/ChangeLog,v 1.7 2008/09/25 09:25:14 omp Exp $
+
+*omptagger-1.0.2 (25 Sep 2008)
+
+  25 Sep 2008; David Shakaryan <omp@gentoo.org> -omptagger-1.0.ebuild,
+  -omptagger-1.0.1.ebuild, +omptagger-1.0.2.ebuild:
+  Version bump; use Ruby regular expressions as grep is broken.
 
   22 Apr 2008; Raúl Porcel <armin76@gentoo.org> omptagger-1.0.1.ebuild:
   Add ~sparc
